11 December 2008
+ Changed wording on some punishment.
+ Punish menu is drop down float now
+ Option to delete all user comments added for both ip and id based.
+ New icons for reported status.
+ Yanked background image and made icons just plain old images.
+ Replaced delete icons with trashcan icon.
+ Added new functions to update a thread's comment count and last
poster.
+ Updated: img/delete.png, img/erase.png, img/report.png,
           img/reported.png, javascript/admin/default.php,
           javascript/admin/head.js, templates/style.css

2 December 2008
+ Added comment style on report page to support punish icon

Version 1.2.1
------------------------------------------------------------------------
25 November 2008
+ Catching error if comment user fails.
+ Bug Fix: New comment user is created on first comment.
+ Bug Fix: Display name error

Version 1.2.0
------------------------------------------------------------------------
3 November 2008
+ Added install.php to create default rank
+ Removed display_name column from install.sql
+ Added some static values to lessen database access for ranks.
+ Rank doesn't try to load user ranks when it doesn't have an id.

27 October 2008
+ Added filecabinet selection of avatars
+ Updated: templates/settings_form.tpl

20 October 2008
+ More work on ranking and proper display of rank images.
+ Updated: templates/user_settings.php

17 October 2008
+ Removed ranking material out of the settings tab and created ranking
  classes and database tables.
+ Rewrote expandCollapse
+ Updated: templates/new_rank.tpl, templates/ranks.tpl,
  templates/settings_form.tpl, templates/user_rank.tpl,
  templates/user_settings.tpl, javascript/expandCollapse/head.js,
  conf/error.php

9 October 2008
+ Comment users are now leaning on new demographics changes. Dropped
  display_name field.

1 October 2008
+ Fixed some user setting bugs.

23 September 2008
+ Updated: templates/admin.css, templates/history.tpl

9 September 2008